@startuml diagram


class Character{
    +characterName: string
    +characterPrefab: GameObject
    +health: Health
    +energy: Energy
    +healthBar: HealthBar
    +energyBar: EnergyBar

    +Grapple()
    +Attack()
    +Counter()
    +Dodge()
    +Heal()
    -UpdateHealthBar(health: Health)
    -UpdateEnergyBar(energy: Energy)
}


class Fighter{
    -score: int
    -character: Character
    -isWinner: Boolean = false
    -hand: List<Card>
        
    +Fighter(NickName: string, actorNumber: int, isLocal: Boolean)
    +SetCharacter(character: Character)
    +GetCharacter(): Character
    +SetScore(score: int)
    +GetScore(): int
    +SetWinner(isWinner: Boolean): void
    +IsWinner(): Boolean
}

class Card implements IComparable{
    +type: String
    +damageAmount: int
    +artwork: Sprite
    +CompareTo(anotherCharacter: Character): int
    +init(type: String, damageAmount: int, artwork: Sprite)

}

class Energy{
    -maxEnergy: int
    -currentEnergy: int

    +AddSkillPoints(combo: int)
}

class Health{
    +maxHealth: int
    +currentHealth: int
    +ReduceHealth(damageAmount: int)
    +Heal(healAmount: int)
}

class EnergyBar{
    +energy: Energy
    +fillImage: Image
    +slider: Slider
}

class HealthBar{
    +health: Health
    +fillImage: Image
    +slider: Slider
    +colour: Colour
}

class PlayerManager{
    -playerPrefab: GameObject
    -fighter: Fighter 
  
    -Update(): void
    +HandleWinner(): string
    +UpdatePlayerScore(point: int): void
    +HandleCardSelection(card1: Card, card2: Card): void
    +SetTurn(player: Player): void
    +CheckDeath(player: Player): boolean
}

class GameManager{
    -{static}instance: GameManager
    -playerManagerObject: GameObject
    
    +ChangeState(state: GameState): void

}

GameManager -left-> PlayerManager:uses

Fighter--> Character: uses
Health --> HealthBar: uses
Energy --> EnergyBar: uses
Energy -right- Health: associated with
Fighter -left-> Card: uses


@enduml
